--- a/index.html
+++ b/index.html
@@ -5,11 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>Static Template</title>
-    <link rel="stylesheet" href="https://ongefb.csb.app/styles.css" />
-    <script
-      type="text/javascript"
-      src="https://ongefb.csb.app/index.js"
-    ></script>
+    <link rel="stylesheet" href="./styles.css" />
+    <script type="text/javascript" src="./index.js"></script>
   </head>
   <body>
     <h1>
@@ -20,7 +17,7 @@
       SVGs often loaded like this with multiple addressable symbols in one file.
     </p>
     <svg class="file-icon">
-      <use xlink:href="https://ongefb.csb.app/icons.svg#pdf-icon"></use>
+      <use xlink:href="./icons.svg#pdf-icon"></use>
     </svg>
 
     <p>
@@ -40,7 +37,7 @@
     </p>
     <div
       class="file-icon mask"
-      data-target="https://ongefb.csb.app/pdf-mod.svg"
+      data-target="./pdf-mod.svg"
       style="height: 58.75px;"
     ></div>
 
